--- a/TwitterNetHack/TwitterNetHack.vcxproj
+++ b/TwitterNetHack/TwitterNetHack.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="object.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="TextHandler.cpp" />
@@ -158,6 +159,7 @@
     <ClInclude Include="Character.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="InputHandler.h" />
+    <ClInclude Include="object.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="TextHandler.h" />
