--- a/TwitterNetHack/TwitterNetHack.vcxproj.filters
+++ b/TwitterNetHack/TwitterNetHack.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="TextHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="object.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
@@ -55,6 +58,9 @@
     </ClInclude>
     <ClInclude Include="TextHandler.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="object.h">
+      <Filter>Resource Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
